# microservice

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
injection-macros/: Cargo.toml
injection-macros/src/: implementations.rs  lib.rs
microservice/: Cargo.toml
microservice/src/: config.rs  constant.rs  error.rs  injection.rs  lib.rs  logger.rs  pubsub.rs  service.rs  service_discovery.rs
microservice/src/share/: mod.rs
tests/: Cargo.toml
tests/src/: injection.rs  lib.rs  url.rs
tools-macros/: Cargo.toml
tools-macros/src/: implementations.rs  lib.rs
