[package]
name = "microservice"
version = "0.1.0"
edition = "2021"
authors = ["Fabrice Bazzaro <contact@infine-it.fr>"]
repository = ""
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Dependency injection infrastructure to generate microservices from an ecosystem of components."
rust-version = "1.61"


[dependencies]
async-std = { version = "1.12" }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }

# Internal dependencies
injection_macros = { path = "../injection-macros" }
tools_macros = { path = "../tools-macros" }


# Error
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }

# Config
serde_yaml = { version = "0.8" }

# Logger
log = { version = "0.4", features = ["std", "serde"] }

# PubSub
bytes = { version = "1.1" }
