[package]
name = "microservice"
version = "0.1.0"
edition = "2021"
authors = ["Fabrice Bazzaro <contact@infine-it.fr>"]
repository = "https://github.com/FabriceBazzaro/microservice.git"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Dependency injection infrastructure to generate microservices from an ecosystem of components."
rust-version = "1.61"


[dependencies]
# Internal dependencies
injection_macros = { path = "../injection-macros" }
tools_macros = { path = "../tools-macros" }

# Transverse dependencies
async-std = { version = "1.12" }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }

# Error
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }

# Config
serde_yaml = { version = "0.8" }

# Logger
lazy_static = { version = "1.4" }
chrono = { version = "0.4" }
bincode = { version = "2.0.0-rc.1", git = "https://github.com/bincode-org/bincode.git" }


# PubSub
bytes = { version = "1.1" }
